# approuter

./: .gitignore  ASSUMED_BREACH_THREAT_MODEL.md  BACKLOG.md  CLAUDE.md  Cargo.toml  NEXT_STEPS.md  OWNERS.yaml  PROOF_OF_ARTIFACTS.md  README.md  TIMELINE_OF_INVENTION.md  TROUBLESHOOTING.md
.github/workflows/: ci.yml
approuter/: .env.example  Cargo.toml  Dockerfile  analytics.html  dashboard.html  openapi.json  railway.toml  status.html  tunnels.html
approuter-acme/: Cargo.toml  README.md
approuter-acme/src/: acme.rs  cf_dns.rs  main.rs  proxy.rs
approuter/client/: Cargo.toml
approuter/client/src/: lib.rs
approuter/config/: approuter.service  cloudflared.service  registry.json  registry.railway.json
approuter/deploy/: cloudflared-start.sh  deploy-to-gd.sh
approuter/deploy/systemd/: approuter.service  cloudflared-cochranblock.service  cochranblock.service  oakilydokily.service  rogue-repo.service
approuter/docs/: PORTFOLIO_ROUTER.md  RAILWAY.md  ROUTER.md  TUNNEL_1033.md  TUNNEL_ERRORS.md  TUNNEL_SYSTEMD.md
approuter/src/: analytics.rs  api.rs  cloudflare.rs  ingress_direct.rs  lib.rs  main.rs  metrics_api.rs  metrics_catalog.rs  proxy.rs  registry.rs  restart.rs  run.rs  selfcheck.rs  setup.rs  tunnel.rs  tunnel_api.rs  tunnel_metrics.rs  tunnel_provider.rs
approuter/src/cloudflare/: dns.rs  mod.rs  tunnel.rs
approuter/tests/: api_hardening.rs  cloudflare_mock.rs  proxy_errors.rs  proxy_forwarding.rs  register_integration.rs  route_matching.rs  tunnel_auth.rs
cochranblock/: .gitignore  Cargo.toml  Dockerfile  README.md  railway.toml
docs/: PROOF_OF_ARTIFACTS.md
kova/: README.md
kova-core/: Cargo.toml
kova-core/src/: backlog.rs  intent.rs  lib.rs
kova-web/: Cargo.toml  Trunk.toml  index.html
kova-web/src/: app.rs  app.rs.bak  lib.rs  main.rs
oakilydokily/: README.md
oakilydokily/mural-wasm/: README.md
packaging/snap/: snapcraft.yaml
rogue-repo/: README.md
rogue-repo/rogue-runner/: README.md
scripts/: build-monorepo.sh  setup-railway.sh  setup-via-api.sh
whyyoulying/: .gitignore  Cargo.toml  README.md  kovakey.pub
whyyoulying/docs/: USER_STORY_ANALYSIS.md  protocol_map.md
whyyoulying/fixtures/: billing_records.json  config.json  contracts.json  employees.json  labor_charges.json
whyyoulying/src/: config.rs  data.rs  lib.rs  main.rs  tests.rs  types.rs
whyyoulying/src/detect/: ghost.rs  labor.rs  mod.rs
whyyoulying/src/export/: mod.rs
wowasticker/: README.md
