# Unlicense — cochranblock.org
# Contributors: Mattbusel (XFactor), GotEmCoach, KOVA, Claude Opus 4.6, SuperNinja, Composer 1.5, Google Gemini Pro 3

[workspace]
resolver = "2"
members = [
    "approuter",
    "approuter/client",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Servers: faster runtime (opt-level 3). CLI/tools keep "z" for size.
[profile.release.package.approuter]
opt-level = 3

# P27 Speed-Diamond — for request-serving edge binaries. Runtime wins.
# Build: `cargo build -p approuter --profile=diamond`.
[profile.diamond]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
debug = false
incremental = false