# Unlicense — cochranblock.org
# Contributors: Mattbusel (XFactor), GotEmCoach, KOVA, Claude Opus 4.6, SuperNinja, Composer 1.5, Google Gemini Pro 3

[package]
name = "approuter"
version = "0.2.0"
edition = "2024"
description = "Reverse proxy + app registration for Cloudflare tunnel"

# client = re-export approuter-client for apps. Not needed by approuter binary or -test.
[features]
default = []
client = ["dep:approuter-client"]
tests = ["exopack"]

[lib]
name = "approuter"
path = "src/lib.rs"

[[bin]]
name = "approuter"
path = "src/main.rs"

[[bin]]
name = "approuter-test"
path = "src/bin/approuter-test.rs"
required-features = ["tests"]

[dependencies]
axum = { version = "0.7", features = ["json"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "compression-deflate", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
libc = "0.2"
approuter-client = { path = "client", optional = true }
exopack = { git = "https://github.com/cochranblock/exopack", optional = true, features = ["interface"] }

[dev-dependencies]
wiremock = "0.6"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }