# Unlicense — cochranblock.org
# Contributors: Mattbusel (XFactor), GotEmCoach, KOVA, Claude Opus 4.6, SuperNinja, Composer 1.5, Google Gemini Pro 3

# Client lib for self-registering with approuter. Lives in approuter context.

[package]
name = "approuter-client"
version = "0.2.0"
edition = "2021"
description = "Self-register with approuter (f116). Used by cochranblock, oakilydokily."
license = "Unlicense"
repository = "https://github.com/cochranblock/approuter"
authors = ["Cochran Block"]

[lib]
name = "approuter_client"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls", "gzip"], default-features = false }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"